<?xml version="1.0"?>
<package>
  <name>robotiq_description</name>
  <version>1.0.0</version>
  <description>The robotiq_description package (derived from drcsim_description, originally by Carlos Agüero and Shaun Edwards)</description>
  <maintainer email="wei.cheah@manchester.ac.uk">Wei Cheah</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
</package>
