<?xml version="1.0"?>
<package>
  <name>robotiq_gazebo</name>
  <version>1.0.0</version>
  <description>The robotiq_gazebo package (derived from drcsim_gazebo originally by John Hsu)</description>
  <maintainer email="wei.cheah@manchester.ac.uk">Wei Cheah</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>robotiq_description</build_depend>
  
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robotiq_description</run_depend>

</package>
